--- a/stylesheets/layout/_grids.scss
+++ b/stylesheets/layout/_grids.scss
@@ -29,3 +29,9 @@
   justify-content: space-between;
   margin-bottom: 45px;
 }
+
+.product-columns {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 45px;
+}
