--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -464,6 +464,12 @@ input[type=radio].visually-hidden {
   margin-bottom: 45px;
 }
 
+.product-columns {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 45px;
+}
+
 .page-header {
   margin-bottom: 70px;
   font-size: 16px;
@@ -715,6 +721,7 @@ legend {
   padding: 0;
   list-style: none;
 }
+
 .filter-option:not(:last-child) {
   margin-bottom: 15px;
 }
@@ -792,7 +799,19 @@ legend {
   background-color: #ffffff;
 }
 
+.product-info {
+  width: 390px;
+}
+.product-info h3 {
+  margin: 0;
+  margin-bottom: 30px;
+  font-size: 24px;
+  line-height: 30px;
+}
+
 .kit-list {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -800,18 +819,44 @@ legend {
   color: #aeaeae;
 }
 
+.product-description {
+  margin: 0;
+  margin-bottom: 30px;
+  padding-top: 20px;
+}
+
+.product-text {
+  margin: 0;
+  margin-bottom: 40px;
+}
+
+.product-price {
+  margin: 0;
+  margin-bottom: 65px;
+}
 .product-price span {
   text-align: right;
   background-color: #e5e5e5;
 }
 
-.product-info h3 {
-  font-size: 24px;
-  line-height: 30px;
+.product-photos {
+  width: 460px;
 }
 
 .product-photo-preview {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
   list-style: none;
+}
+.product-photo-preview li {
+  width: 140px;
+}
+
+.product-photo-full {
+  margin: 0;
+  margin-bottom: 15px;
 }
 
 .promo-title {
