--- a/stylesheets/components/_product_info.scss
+++ b/stylesheets/components/_product_info.scss
@@ -1,4 +1,5 @@
 .product-info {
+  padding-top: 20px;
   width: 390px;
 
   h3 {
@@ -16,13 +17,13 @@
 }
 
 .product-article {
+  text-align: right;
   color: $article_color;
 }
 
 .product-description {
   margin: 0;
   margin-bottom: 30px;
-  padding-top: 20px;
 }
 
 .product-text {
@@ -35,7 +36,7 @@
   margin-bottom: 65px;
 
   span {
-    text-align: right;
+    text-align: center;
     background-color: $price_background;
   }
 }
