--- a/stylesheets/components/_product_photo.scss
+++ b/stylesheets/components/_product_photo.scss
@@ -11,10 +11,13 @@
 
   li {
     width: 140px;
+    height: 150px;
   }
 }
 
 .product-photo-full {
+  width: 460px;
+  height: 500px;
   margin: 0;
   margin-bottom: 15px;
 }
