--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -470,6 +470,13 @@ input[type=radio].visually-hidden {
   margin-bottom: 45px;
 }
 
+.price-columns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 80px;
+}
+
 .page-header {
   margin-bottom: 70px;
   font-size: 16px;
@@ -725,7 +732,8 @@ legend {
 .filter-option:not(:last-child) {
   margin-bottom: 15px;
 }
-.filter-option:not(:last-child) label {
+
+.filter-option label {
   line-height: 18px;
   cursor: pointer;
 }
@@ -800,6 +808,7 @@ legend {
 }
 
 .product-info {
+  padding-top: 20px;
   width: 390px;
 }
 .product-info h3 {
@@ -816,13 +825,13 @@ legend {
 }
 
 .product-article {
+  text-align: right;
   color: #aeaeae;
 }
 
 .product-description {
   margin: 0;
   margin-bottom: 30px;
-  padding-top: 20px;
 }
 
 .product-text {
@@ -835,7 +844,7 @@ legend {
   margin-bottom: 65px;
 }
 .product-price span {
-  text-align: right;
+  text-align: center;
   background-color: #e5e5e5;
 }
 
@@ -852,14 +861,20 @@ legend {
 }
 .product-photo-preview li {
   width: 140px;
+  height: 150px;
 }
 
 .product-photo-full {
+  width: 460px;
+  height: 500px;
   margin: 0;
   margin-bottom: 15px;
 }
 
 .promo-title {
+  margin: 0;
+  margin-bottom: 60px;
+  padding-top: 40px;
   font-size: 48px;
   line-height: 48px;
   text-align: center;
@@ -868,12 +883,50 @@ legend {
 .hair-products h2,
 .about-us h2,
 .price-services h2 {
+  margin: 0;
   font-size: 24px;
   line-height: 30px;
 }
 
+.hair-products {
+  width: 240px;
+  margin-bottom: 65px;
+}
+.hair-products h2 {
+  margin-bottom: 30px;
+}
+
+.price-services {
+  width: 465px;
+}
+.price-services h2 {
+  margin-bottom: 35px;
+  padding-right: 250px;
+}
+
+.about-us {
+  display: flex;
+  flex-wrap: wrap;
+}
+.about-us p {
+  margin: 0;
+  width: 385px;
+}
+.about-us p:first-of-type {
+  margin-right: 95px;
+}
+.about-us h2 {
+  width: 940px;
+  margin-bottom: 30px;
+}
+
 .hair-products-list {
+  margin: 0;
+  padding: 0;
   list-style: none;
+}
+.hair-products-list li {
+  margin-bottom: 15px;
 }
 
 .price-services table {
