--- a/stylesheets/layout/_grids.scss
+++ b/stylesheets/layout/_grids.scss
@@ -35,3 +35,11 @@
   justify-content: space-between;
   margin-bottom: 45px;
 }
+
+.price-columns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 80px;
+
+}
