--- a/stylesheets/components/_price.scss
+++ b/stylesheets/components/_price.scss
@@ -1,4 +1,7 @@
 .promo-title {
+  margin: 0;
+  margin-bottom: 60px;
+  padding-top: 40px;
   font-size: 48px;
   line-height: 48px;
   text-align: center;
@@ -7,12 +10,56 @@
 .hair-products h2,
 .about-us h2,
 .price-services h2 {
+  margin: 0;
   font-size: 24px;
   line-height: 30px;
 }
 
+.hair-products {
+  width: 240px;
+  margin-bottom: 65px;
+
+  h2 {
+    margin-bottom: 30px;
+  }
+}
+
+.price-services {
+  width: 465px;
+
+  h2 {
+    margin-bottom: 35px;
+    padding-right: 250px;
+  }
+}
+
+.about-us {
+  display: flex;
+  flex-wrap: wrap;
+
+  h2 {
+    margin-bottom: 30px;
+    width: 940px;
+  }
+
+  p {
+    margin: 0;
+    width: 385px;
+  }
+
+  p:first-of-type {
+    margin-right: 95px;
+  }
+}
+
 .hair-products-list {
+  margin: 0;
+  padding: 0;
   list-style: none;
+
+  li {
+    margin-bottom: 15px;
+  }
 }
 
 .price-services table {
