--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -20,7 +20,10 @@
 @import 'components/pagination';
 @import 'components/product_info';
 @import 'components/product_photo';
-@import 'components/price';
 @import 'components/contacts';
+@import 'components/about_us';
+@import 'components/hair_products';
+@import 'components/price_services';
+@import 'components/promo_title';
 
 @import 'pages/inner';
