--- a/stylesheets/layout/_grids.scss
+++ b/stylesheets/layout/_grids.scss
@@ -42,4 +42,9 @@
   justify-content: space-between;
   margin-bottom: 80px;
 
+  h2 {
+    margin: 0;
+    font-size: 24px;
+    line-height: 30px;
+  }
 }
