--- a/stylesheets/components/_product_photo.scss
+++ b/stylesheets/components/_product_photo.scss
@@ -12,6 +12,7 @@
   li {
     width: 140px;
     height: 149px;
+    box-shadow: 0 0 15px rgba(0,1,1,0.2);
   }
 }
 
@@ -20,4 +21,5 @@
   height: 498px;
   margin: 0;
   margin-bottom: 15px;
+  box-shadow: 0 0 15px rgba(0,1,1,0.2);
 }
