--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -14,6 +14,7 @@
 @import 'components/gallery';
 @import 'components/modal_login';
 @import 'components/modal_map';
+@import 'components/modal';
 @import 'components/breadcrumbs';
 @import 'components/filters';
 @import 'components/catalog';
