--- a/stylesheets/components/_appointment.scss
+++ b/stylesheets/components/_appointment.scss
@@ -15,5 +15,22 @@
 
 .appointment-info {
   margin: 0;
+  margin-bottom: 15px;
+}
+
+.appointment-form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.appointment-item {
+  width: 150px;
+  margin: 0;
   margin-bottom: 10px;
+}
+
+.appointment .button {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
 }
