--- a/stylesheets/components/_filters.scss
+++ b/stylesheets/components/_filters.scss
@@ -25,9 +25,49 @@ legend {
   margin-bottom: 15px;
 }
 
-.filter-option label {
+.producers-list .filter-option label {
+    display: block;
+    line-height: 18px;
+    cursor: pointer;
+    padding-left: 40px;
+    padding-top: 2px;
+    position: relative;
+
+   &::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    border: 2px solid black;
+  }
+}
+
+.product-groups .filter-option label {
+  display: block;
   line-height: 18px;
   cursor: pointer;
+  padding-left: 40px;
+  padding-top: 2px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    border: 2px solid black;
+    border-radius: 15px;
+    background-color: transparent;
+    box-shadow: inset 0 0 0 4px #f9f5f3;
+  }
+}
+
+.filter-input-radio:checked + label::before {
+  background-color: black;
 }
 
 .filter-input:hover + label,
@@ -38,4 +78,12 @@ legend {
 .filter-input:disabled + label {
   cursor: not-allowed;
   color: $disabled;
+}
+
+.filter-input-checkbox:checked + label::before {
+  background: url('../img/cross.svg') 50% 50% no-repeat;
+}
+
+.filter-input-checkbox:disabled + label::before {
+  opacity: 0.5;
 }
