--- a/stylesheets/components/_pagination.scss
+++ b/stylesheets/components/_pagination.scss
@@ -1,5 +1,16 @@
 .pagination-list {
+  display: flex;
   list-style: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    margin: 0;
+    margin-right: 5px;
+  }
+  a {
+    padding: 15px 20px;
+  }
 }
 
 .pagination-link {
