--- a/stylesheets/components/_price_services.scss
+++ b/stylesheets/components/_price_services.scss
@@ -11,9 +11,20 @@
 }
 
 .price-services td {
-  border: 1px solid $black;
+  border: 2px solid $black;
+  padding: 10px 15px;
+
 }
 
 .price-services td:nth-child(2) {
   text-align: center;
+}
+
+.price-services table {
+  width: 100%;
+}
+
+
+.price-services td {
+  width: 50%;
 }
