--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -519,6 +519,8 @@ input[type=radio].visually-hidden {
 .app-navigation a,
 .user-navigation a {
   color: #ffffff;
+  display: block;
+  padding: 25px 20px;
 }
 .app-navigation a:hover, .app-navigation a:focus,
 .user-navigation a:hover,
@@ -527,12 +529,35 @@ input[type=radio].visually-hidden {
 }
 
 .app-navigation {
+  display: flex;
   width: 545px;
-  margin-right: 285px;
 }
 
 .user-navigation {
+  display: flex;
   width: 110px;
+  margin-left: auto;
+}
+.user-navigation a {
+  padding-left: 50px;
+  position: relative;
+}
+
+.user-navigation a::before {
+  content: "";
+  position: absolute;
+  top: 27px;
+  left: 25px;
+  width: 16px;
+  height: 16px;
+  background: url("../img/login.svg") no-repeat 0 0;
+  opacity: 0.5;
+}
+
+.user-navigation a:hover::before,
+.user-navigation a:focus::before,
+.user-navigation a:active::before {
+  opacity: 1;
 }
 
 .advantages {
@@ -565,6 +590,8 @@ input[type=radio].visually-hidden {
 }
 
 .button {
+  display: inline-block;
+  padding: 10px 30px;
   font: inherit;
   color: #ffffff;
   text-align: center;
@@ -617,7 +644,24 @@ input[type=radio].visually-hidden {
 
 .appointment-info {
   margin: 0;
+  margin-bottom: 15px;
+}
+
+.appointment-form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.appointment-item {
+  width: 150px;
+  margin: 0;
   margin-bottom: 10px;
+}
+
+.appointment .button {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
 }
 
 .gallery {
@@ -689,6 +733,10 @@ input[type=radio].visually-hidden {
   background: #d3d3d3 url("../img/map.jpg") 50% 50% no-repeat;
 }
 
+.modal {
+  display: none;
+}
+
 .page-title {
   font-size: 30px;
   line-height: 42px;
@@ -697,6 +745,10 @@ input[type=radio].visually-hidden {
 
 .breadcrumbs {
   display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  margin-bottom: 55px;
+  padding: 0;
   list-style: none;
 }
 
@@ -709,6 +761,21 @@ input[type=radio].visually-hidden {
 
 .breadcrumbs-current {
   color: rgba(0, 0, 0, 0.5);
+}
+
+.breadcrumbs li:not(:last-child) {
+  padding-right: 40px;
+  position: relative;
+}
+.breadcrumbs li:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  right: 15px;
+  top: 50%;
+  background-color: #000000;
+  transform: translateY(-50%) rotate(45deg);
 }
 
 .filters {
@@ -738,9 +805,47 @@ legend {
   margin-bottom: 15px;
 }
 
-.filter-option label {
+.producers-list .filter-option label {
+  display: block;
   line-height: 18px;
   cursor: pointer;
+  padding-left: 40px;
+  padding-top: 2px;
+  position: relative;
+}
+.producers-list .filter-option label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  border: 2px solid black;
+}
+
+.product-groups .filter-option label {
+  display: block;
+  line-height: 18px;
+  cursor: pointer;
+  padding-left: 40px;
+  padding-top: 2px;
+  position: relative;
+}
+.product-groups .filter-option label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  border: 2px solid black;
+  border-radius: 15px;
+  background-color: transparent;
+  box-shadow: inset 0 0 0 4px #f9f5f3;
+}
+
+.filter-input-radio:checked + label::before {
+  background-color: black;
 }
 
 .filter-input:hover + label,
@@ -751,6 +856,14 @@ legend {
 .filter-input:disabled + label {
   cursor: not-allowed;
   color: rgba(0, 0, 0, 0.5);
+}
+
+.filter-input-checkbox:checked + label::before {
+  background: url("../img/cross.svg") 50% 50% no-repeat;
+}
+
+.filter-input-checkbox:disabled + label::before {
+  opacity: 0.5;
 }
 
 .catalog {
@@ -765,6 +878,7 @@ legend {
   list-style: none;
   padding: 0px;
   margin: 0;
+  margin-bottom: 40px;
 }
 
 .catalog-item {
@@ -772,9 +886,13 @@ legend {
   margin: 0;
   margin-bottom: 20px;
   background-color: #ffffff;
+  box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
 }
 .catalog-item h3 {
   color: #000000;
+}
+.catalog-item:hover {
+  box-shadow: 2.5px 4.33px 25px rgba(0, 1, 1, 0.3);
 }
 
 .catalog-item h3 {
@@ -792,10 +910,49 @@ legend {
 .catalog-item-price span {
   background-color: #e5e5e5;
   text-align: center;
+  width: 110px;
+  padding-top: 5px;
+}
+
+.catalog-item-price {
+  margin: 0;
+  margin-left: 15px;
+  display: flex;
+  margin-bottom: 20px;
+}
+.catalog-item-price a {
+  line-height: 18px;
+  padding: 0;
+  padding: 10px 15px;
+}
+
+.catalog-item a {
+  display: flex;
+  flex-direction: column;
+}
+.catalog-item a h3 {
+  display: flex;
+  flex-direction: column;
+  order: 1;
+  margin: 0;
+  margin: 15px;
+}
+.catalog-item a .catalog-item-image {
+  margin: 0;
 }
 
 .pagination-list {
+  display: flex;
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.pagination-list li {
+  margin: 0;
+  margin-right: 5px;
+}
+.pagination-list a {
+  padding: 15px 20px;
 }
 
 .pagination-link {
@@ -828,6 +985,21 @@ legend {
   padding: 0;
   list-style: none;
 }
+.kit-list li {
+  margin-left: 20px;
+  position: relative;
+}
+
+.kit-list li::before {
+  content: "";
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  left: -20px;
+  top: 10px;
+  background-color: #000000;
+  transform: translateY(-50%) rotate(45deg);
+}
 
 .product-article {
   text-align: right;
@@ -837,6 +1009,8 @@ legend {
 .product-description {
   margin: 0;
   margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .product-text {
@@ -845,10 +1019,13 @@ legend {
 }
 
 .product-price {
+  display: flex;
   margin: 0;
   margin-bottom: 65px;
 }
 .product-price span {
+  width: 110px;
+  padding-top: 10px;
   text-align: center;
   background-color: #e5e5e5;
 }
@@ -867,6 +1044,7 @@ legend {
 .product-photo-preview li {
   width: 140px;
   height: 149px;
+  box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
 }
 
 .product-photo-full {
@@ -874,6 +1052,7 @@ legend {
   height: 498px;
   margin: 0;
   margin-bottom: 15px;
+  box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
 }
 
 .index-columns .contacts {
@@ -914,8 +1093,23 @@ legend {
   padding: 0;
   list-style: none;
 }
+.hair-products-list li {
+  margin-left: 20px;
+  position: relative;
+}
 .hair-products-list li:not(:last-child) {
   margin-bottom: 15px;
+}
+
+.hair-products-list li::before {
+  content: "";
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  left: -20px;
+  top: 10px;
+  background-color: #000000;
+  transform: translateY(-50%) rotate(45deg);
 }
 
 .price-services {
@@ -930,19 +1124,46 @@ legend {
 }
 
 .price-services td {
-  border: 1px solid #000000;
+  border: 2px solid #000000;
+  padding: 10px 15px;
 }
 
 .price-services td:nth-child(2) {
   text-align: center;
 }
 
+.price-services table {
+  width: 100%;
+}
+
+.price-services td {
+  width: 50%;
+}
+
 .promo-title {
+  display: flex;
+  align-items: center;
   margin: 0;
   margin-bottom: 60px;
   font-size: 48px;
   line-height: 48px;
-  text-align: center;
+}
+
+.promo-title::before,
+.promo-title::after {
+  content: "";
+  width: 50px;
+  height: 2px;
+  flex-grow: 1;
+  background: #000000;
+}
+
+.promo-title::before {
+  margin-right: 25px;
+}
+
+.promo-title::after {
+  margin-left: 25px;
 }
 
 .inner-page {
@@ -958,13 +1179,11 @@ legend {
   flex-direction: row;
 }
 .inner-page .header-logo {
+  margin-top: 20px;
   order: 0;
   align-self: auto;
   width: 111px;
   height: 24px;
-}
-.inner-page .user-navigation {
-  margin-left: auto;
 }
 
 /*# sourceMappingURL=main.css.map */
