--- a/stylesheets/pages/_inner.scss
+++ b/stylesheets/pages/_inner.scss
@@ -13,13 +13,10 @@
   }
 
   .header-logo {
+    margin-top: 20px;
     order: 0;
     align-self: auto;
     width: 111px;
     height: 24px;
-  }
-
-  .user-navigation {
-    margin-left: auto;
   }
 }
