--- a/stylesheets/utilities/_variables.scss
+++ b/stylesheets/utilities/_variables.scss
@@ -10,3 +10,7 @@ $gallery_background: #d3d3d3;
 $article_color: #aeaeae;
 $price_background: #e5e5e5;
 $disabled: rgba(0, 0, 0, 0.5);
+$color_shadow: rgba(0, 1, 1, 0.2);
+$color_shadow_hover: rgba(0, 1, 1, 0.3);
+$catalog_img_background: #d3d3d3;
+$product_photo_shadow: 0 0 15px rgba(0,1,1,0.2);
