--- a/stylesheets/components/_catalog.scss
+++ b/stylesheets/components/_catalog.scss
@@ -4,76 +4,78 @@
 }
 
 .catalog-list {
-  display: flex;
-  align-items: flex-start;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 220px);
+  grid-gap: 20px;
   list-style: none;
   padding: 0px;
-  margin:0;
-  margin-bottom: 40px;
+  margin: 0;
+  margin-bottom: 60px;
 }
 
 .catalog-item {
   width: 220px;
   margin: 0;
-  margin-bottom: 20px;
   background-color: $white;
-  box-shadow: 0 0 15px rgba(0,1,1,0.2);
+
+  box-shadow: 0 0 15px $color_shadow;
 
   h3 {
     color: $black;
+    margin: 0;
   }
 
   &:hover {
-    box-shadow: 2.5px 4.33px 25px rgba(0,1,1,0.3);
+    box-shadow: 2.5px 4.33px 25px $color_shadow_hover;
   }
-}
 
-.catalog-item h3 {
-  margin: 0;
-}
-
-.catalog-item:not(:nth-child(3n+3)) {
-  margin-right: 20px;
+  &:not(:nth-child(3n + 3)) {
+    margin-right: 20px;
+  }
 }
 
 .product-category {
   text-transform: none;
 }
 
-.catalog-item-price span {
-  background-color: $price_background;
-  text-align: center;
-  width: 110px;
-  padding-top: 5px;
-}
-
 .catalog-item-price {
+  display: flex;
   margin: 0;
   margin-left: 15px;
-  display: flex;
   margin-bottom: 20px;
+  line-height: 18px;
 
   a {
-    line-height: 18px;
     padding: 0;
     padding: 10px 15px;
   }
+
+  span {
+    background-color: $price_background;
+    text-align: center;
+    width: 110px;
+    padding-top: 10px;
+  }
 }
 
-.catalog-item a {
+.catalog-item a:first-child {
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 
   h3 {
     display: flex;
     flex-direction: column;
     order: 1;
-    margin: 0;
-    margin: 15px;
+    margin: 0px 15px;
+    font-size: 14px;
+    line-height: 18px;
   }
 
   .catalog-item-image {
     margin: 0;
+    width: 220px;
+    height: 165px;
+    background-color: $catalog_img_background;
   }
 }
