--- a/stylesheets/components/_pagination.scss
+++ b/stylesheets/components/_pagination.scss
@@ -1,19 +1,22 @@
 .pagination-list {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
 
   li {
     margin: 0;
-    margin-right: 5px;
+    margin-right: 10px;
   }
-  a {
-    padding: 15px 20px;
+  li:last-child {
+    margin-right: 0;
   }
 }
 
 .pagination-link {
+  display: block;
+  padding: 15px 20px;
   line-height: 18px;
   color: $white;
   background-color: $black;
