--- a/stylesheets/components/_price_services.scss
+++ b/stylesheets/components/_price_services.scss
@@ -4,27 +4,22 @@
   h2 {
     margin-bottom: 35px;
   }
-}
 
-.price-services table {
-  border-collapse: collapse;
-}
+  table {
+    border-collapse: collapse;
+  }
 
-.price-services td {
-  border: 2px solid $black;
-  padding: 10px 15px;
+  td {
+    width: 50%;
+    padding: 10px 15px;
+    border: 2px solid $black;
 
-}
+    &:nth-child(2) {
+      text-align: center;
+    }
 
-.price-services td:nth-child(2) {
-  text-align: center;
-}
-
-.price-services table {
-  width: 100%;
-}
-
-
-.price-services td {
-  width: 50%;
+    .price-services table {
+      width: 100%;
+    }
+  }
 }
