--- a/stylesheets/components/_product_info.scss
+++ b/stylesheets/components/_product_info.scss
@@ -16,7 +16,7 @@
   list-style: none;
 
   li {
-    margin-left: 20px;
+    padding-left: 20px;
     position: relative;
   }
 }
@@ -25,11 +25,11 @@
   content: "";
   position: absolute;
 
-  width: 7px;
-  height: 7px;
+  width: 8px;
+  height: 8px;
 
-  left: -20px;
-  top: 10px;
+  left: 2px;
+  top: 50%;
 
   background-color: $black;
 
@@ -61,7 +61,7 @@
 
   span {
     width: 110px;
-    padding-top: 10px;
+    padding: 10px;
     text-align: center;
     background-color: $price_background;
   }
