--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -12,9 +12,7 @@
 @import 'components/news';
 @import 'components/appointment';
 @import 'components/gallery';
-@import 'components/modal_login';
-@import 'components/modal_map';
-@import 'components/modal';
+@import 'components/modal/all';
 @import 'components/breadcrumbs';
 @import 'components/filters';
 @import 'components/catalog';
