--- a/stylesheets/pages/_inner.scss
+++ b/stylesheets/pages/_inner.scss
@@ -15,7 +15,7 @@
   .header-logo {
     padding-top: 20px;
     order: 0;
-    align-self: auto;
+    align-self: flex-start;
     width: 111px;
     height: 24px;
   }
