--- a/stylesheets/components/_appointment.scss
+++ b/stylesheets/components/_appointment.scss
@@ -20,12 +20,13 @@
   margin-bottom: 15px;
 }
 
-.apponiment-form-item {
+.apponiment-form-group {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 10px;
 
   &:last-of-type {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 }
 
@@ -34,12 +35,9 @@
   flex-direction: column;
 }
 
-.apponiment-form-item
-
 .appointment-item {
   width: 140px;
   margin: 0;
-  margin-bottom: 10px;
 
   label {
     display: block;
