--- a/stylesheets/components/_catalog.scss
+++ b/stylesheets/components/_catalog.scss
@@ -8,9 +8,9 @@
   grid-template-columns: repeat(3, 220px);
   grid-gap: 20px;
   list-style: none;
-  padding: 0px;
+  padding: 0;
   margin: 0;
-  margin-bottom: 60px;
+  margin-bottom: 45px;
 }
 
 .catalog-item {
@@ -18,19 +18,10 @@
   margin: 0;
   background-color: $white;
 
-  box-shadow: 0 0 15px $color_shadow;
-
-  h3 {
-    color: $black;
-    margin: 0;
-  }
+  box-shadow: 0 0 15px $element_shadow;
 
   &:hover {
-    box-shadow: 2.5px 4.33px 25px $color_shadow_hover;
-  }
-
-  &:not(:nth-child(3n + 3)) {
-    margin-right: 20px;
+    box-shadow: 2.5px 4.33px 25px $element_shadow_hover;
   }
 }
 
@@ -41,20 +32,13 @@
 .catalog-item-price {
   display: flex;
   margin: 0;
-  margin-left: 15px;
-  margin-bottom: 20px;
-  line-height: 18px;
-
-  a {
-    padding: 0;
-    padding: 10px 15px;
-  }
+  margin: 0 15px 15px;
 
   span {
-    background-color: $price_background;
-    text-align: center;
     width: 110px;
-    padding-top: 10px;
+    padding: 10px;
+    text-align: center;
+    background-color: $price_background;
   }
 }
 
@@ -62,6 +46,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+  color: black;
 
   h3 {
     display: flex;
