--- a/stylesheets/utilities/_variables.scss
+++ b/stylesheets/utilities/_variables.scss
@@ -1,16 +1,16 @@
-$black: #000000;
-$white: #ffffff;
-$content_background: #fcf9f6;
-$input_background: #f9f5f3;
-$on_cursor: #653d15;
-$navigation_on_cursor: #242424;
-$footer_background: #252525;
-$map_background: #d3d3d3;
-$gallery_background: #d3d3d3;
-$article_color: #aeaeae;
-$price_background: #e5e5e5;
-$disabled: rgba(0, 0, 0, 0.5);
-$color_shadow: rgba(0, 1, 1, 0.2);
-$color_shadow_hover: rgba(0, 1, 1, 0.3);
-$catalog_img_background: #d3d3d3;
-$product_photo_shadow: 0 0 15px rgba(0,1,1,0.2);
+$black:                 rgba(0,0,0,1);
+$white:                 rgba(255,255,255,1);
+$content_background:    rgba(252,249,246,1);
+$input_background:      rgba(249,245,243,1);
+$on_cursor:             rgba(101,61,21,1);
+$navigation_on_cursor:  rgba(36,36,36,1);
+$footer_background:     rgba(37,37,37,1);
+$map_background:        rgba(211,211,211,1);
+$gallery_background:    rgba(211,211,211,1);
+$article_color:         rgba(174,174,174,1);
+$price_background:      rgba(229,229,229,1);
+$disabled:              rgba(0, 0, 0, 0.5);
+$element_shadow:        rgba(0, 1, 1, 0.2);
+$element_shadow_hover:  rgba(0, 1, 1, 0.3);
+$catalog_img_background:rgba(211,211,211,1);
+$product_photo_shadow:  rgba(0,1,1,0.2);
