lesson-5 last-fix

--- a/stylesheets/components/_catalog.scss
+++ b/stylesheets/components/_catalog.scss
@@ -59,6 +59,7 @@
 
   .catalog-item-image {
     margin: 0;
+    margin-bottom: 15px;
     width: 220px;
     height: 165px;
     background-color: $catalog_img_background;
