--- a/stylesheets/pages/_inner.scss
+++ b/stylesheets/pages/_inner.scss
@@ -13,10 +13,10 @@
   }
 
   .header-logo {
-    padding-top: 20px;
+    padding: 23px 20px;
     order: 0;
     align-self: flex-start;
-    width: 111px;
-    height: 24px;
+    width: 151px;
+    height: 70px;
   }
 }
