--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -353,8 +353,8 @@ body {
   padding: 0;
   font: 700 14px/24px "PT Sans Narrow", Arial, sans-serif;
   text-transform: uppercase;
-  color: #ffffff;
-  background: #000000 url("../img/hair-salon.jpeg") 0 0 no-repeat;
+  color: white;
+  background: black url("../img/hair-salon.jpeg") 0 0 no-repeat;
 }
 
 img {
@@ -389,7 +389,7 @@ input[type=radio].visually-hidden {
 .page-footer {
   padding-top: 60px;
   padding-bottom: 40px;
-  color: #ffffff;
+  color: white;
   background: #252525 url("../img/footer-background.png") 0 0 repeat;
 }
 
@@ -404,7 +404,7 @@ input[type=radio].visually-hidden {
 }
 
 .footer-contacts a {
-  color: #ffffff;
+  color: white;
   text-decoration: underline;
 }
 .footer-contacts a:hover, .footer-contacts a:focus {
@@ -418,8 +418,8 @@ input[type=radio].visually-hidden {
 }
 .footer-copyright a:hover,
 .footer-copyright a:focus {
-  color: #000000;
-  background-color: #ffffff;
+  color: black;
+  background-color: white;
 }
 
 .footer-social {
@@ -441,7 +441,7 @@ input[type=radio].visually-hidden {
   display: flex;
   justify-content: space-between;
   padding: 50px 80px;
-  color: #000000;
+  color: black;
   background: url("../img/separator.png") 50% 50% no-repeat, url("../img/content-background.png") 0 0 repeat;
   background-color: #fcf9f6;
 }
@@ -504,7 +504,7 @@ input[type=radio].visually-hidden {
   width: 100%;
   order: 1;
   margin-bottom: 60px;
-  background-color: #000000;
+  background-color: black;
 }
 
 .header-navigation-wrapper .container {
@@ -519,7 +519,7 @@ input[type=radio].visually-hidden {
 }
 .app-navigation a,
 .user-navigation a {
-  color: #ffffff;
+  color: white;
   display: block;
   padding: 25px 20px;
 }
@@ -545,7 +545,7 @@ input[type=radio].visually-hidden {
   bottom: 0;
   left: 20px;
   right: 20px;
-  background-color: #ffffff;
+  background-color: white;
 }
 
 .user-navigation {
@@ -605,11 +605,11 @@ input[type=radio].visually-hidden {
   display: inline-block;
   padding: 10px 30px;
   font: inherit;
-  color: #ffffff;
+  color: white;
   text-align: center;
   vertical-align: middle;
   text-transform: uppercase;
-  background-color: #000000;
+  background-color: black;
   border: 0;
 }
 .button:hover, .button:focus, .button:active {
@@ -646,7 +646,7 @@ input[type=radio].visually-hidden {
   padding: 7px 15px;
   font: inherit;
   background-color: #f9f5f3;
-  border: 2px solid #000000;
+  border: 2px solid black;
 }
 .appointment-item input:hover, .appointment-item input:focus {
   border-color: #653d15;
@@ -693,7 +693,7 @@ input[type=radio].visually-hidden {
   height: 178px;
   margin: 0;
   background-color: lightgray;
-  border: 7px solid #ffffff;
+  border: 7px solid white;
 }
 .gallery-content a {
   display: block;
@@ -710,7 +710,7 @@ input[type=radio].visually-hidden {
 }
 
 .modal-authentication {
-  color: #000000;
+  color: black;
   background: #fcf9f6 url("../img/content-background.png") 0 0 repeat;
 }
 
@@ -720,7 +720,7 @@ input[type=radio].visually-hidden {
 }
 
 .restore {
-  color: #000000;
+  color: black;
   text-decoration: underline;
 }
 .restore:hover, .restore:focus {
@@ -732,7 +732,7 @@ input[type=radio].visually-hidden {
   font: inherit;
   text-transform: uppercase;
   background-color: #f9f5f3;
-  border: 2px solid #000000;
+  border: 2px solid black;
 }
 .login-form input[type=text]:hover, .login-form input[type=text]:focus,
 .login-form input[type=password]:hover,
@@ -750,7 +750,7 @@ input[type=radio].visually-hidden {
 .modal-map {
   width: 780px;
   height: 574px;
-  border: 7px solid #ffffff;
+  border: 7px solid white;
   background: lightgray url("../img/map.jpg") 50% 50% no-repeat;
 }
 
@@ -761,7 +761,7 @@ input[type=radio].visually-hidden {
 .page-title {
   margin: 0;
   margin-bottom: 15px;
-  color: #000000;
+  color: black;
   font-size: 30px;
   line-height: 42px;
 }
@@ -776,7 +776,7 @@ input[type=radio].visually-hidden {
 }
 
 .breadcrumbs a {
-  color: #000000;
+  color: black;
 }
 .breadcrumbs a:hover, .breadcrumbs a:focus {
   text-decoration: underline;
@@ -793,11 +793,11 @@ input[type=radio].visually-hidden {
 .breadcrumbs li:not(.breadcrumbs-current)::after {
   content: "";
   position: absolute;
-  right: 18.5px;
+  right: 22.5px;
   top: 50%;
   width: 8px;
   height: 8px;
-  background-color: #000000;
+  background-color: black;
   transform: translate(50%, -50%) rotate(45deg);
 }
 
@@ -851,7 +851,7 @@ input[type=radio].visually-hidden {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #000000;
+  border: 2px solid black;
   background-color: transparent;
 }
 
@@ -860,7 +860,7 @@ input[type=radio].visually-hidden {
   box-shadow: inset 0 0 0 4px #f9f5f3;
 }
 .filter-input-radio:checked + label::before {
-  background-color: #000000;
+  background-color: black;
 }
 
 .filter-input-checkbox:checked + label::before {
@@ -885,7 +885,7 @@ input[type=radio].visually-hidden {
 .catalog-item {
   width: 220px;
   margin: 0;
-  background-color: #ffffff;
+  background-color: white;
   box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
 }
 .catalog-item:hover {
@@ -924,6 +924,7 @@ input[type=radio].visually-hidden {
 }
 .catalog-item a:first-child .catalog-item-image {
   margin: 0;
+  margin-bottom: 15px;
   width: 220px;
   height: 165px;
   background-color: lightgray;
@@ -948,16 +949,16 @@ input[type=radio].visually-hidden {
   display: block;
   padding: 10px 20px;
   line-height: 18px;
-  color: #ffffff;
-  background-color: #000000;
+  color: white;
+  background-color: black;
 }
 .pagination-link:not(.current-link):hover, .pagination-link:not(.current-link):focus, .pagination-link:not(.current-link):active {
   background-color: #653d15;
 }
 
 .current-link {
-  color: #000000;
-  background-color: #ffffff;
+  color: black;
+  background-color: white;
 }
 
 .product-info {
@@ -988,7 +989,7 @@ input[type=radio].visually-hidden {
   height: 8px;
   left: 2px;
   top: 50%;
-  background-color: #000000;
+  background-color: black;
   transform: translateY(-50%) rotate(45deg);
 }
 
@@ -1099,7 +1100,7 @@ input[type=radio].visually-hidden {
   top: 50%;
   width: 8px;
   height: 8px;
-  background-color: #000000;
+  background-color: black;
   transform: translateY(-50%) rotate(45deg);
 }
 
@@ -1116,7 +1117,7 @@ input[type=radio].visually-hidden {
 .price-services td {
   width: 50%;
   padding: 8px 16px;
-  border: 2px solid #000000;
+  border: 2px solid black;
 }
 .price-services td:nth-child(2) {
   text-align: center;
@@ -1137,7 +1138,7 @@ input[type=radio].visually-hidden {
   width: 160px;
   height: 2px;
   flex-grow: 1;
-  background: #000000;
+  background: black;
 }
 
 .promo-title::before {
@@ -1149,23 +1150,23 @@ input[type=radio].visually-hidden {
 }
 
 .inner-page {
-  color: #000000;
+  color: black;
   background: #fcf9f6 url("../img/content-background.png") 0 0 repeat;
 }
 .inner-page .page-header {
   margin-bottom: 50px;
-  background-color: #000000;
+  background-color: black;
 }
 .inner-page .header-navigation {
   display: flex;
   flex-direction: row;
 }
 .inner-page .header-logo {
-  padding-top: 20px;
+  padding: 23px 20px;
   order: 0;
   align-self: flex-start;
-  width: 111px;
-  height: 24px;
+  width: 151px;
+  height: 70px;
 }
 
 /*# sourceMappingURL=main.css.map */
