--- a/stylesheets/components/_catalog.scss
+++ b/stylesheets/components/_catalog.scss
@@ -1,6 +1,5 @@
 .catalog {
   width: 700px;
-  margin-bottom: 45px;
 }
 
 .catalog-list {
@@ -33,6 +32,7 @@
   display: flex;
   margin: 0;
   margin: 0 15px 15px;
+  line-height: 18px;
 
   span {
     width: 110px;
